samples/_failures_safe/1761326652_d6ac86_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ebbb9f0c.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_ebbb9f0c.c:165:25: error: expected ‘;’ at end of input
  165 |             return token
      |                         ^
      |                         ;
./samples/SAFE/__tmp_ebbb9f0c.c:165:13: error: expected declaration or statement at end of input
  165 |             return token
      |             ^~~~~~
./samples/SAFE/__tmp_ebbb9f0c.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ebbb9f0c.c:165:13: error: expected declaration or statement at end of input
